# ebman

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  demo.tape
.github/workflows/: ci.yml  release.yml
Formula/: ebman.rb
docs/: commands.md  configuration.md  development.md  fonts.md  headless.md  keys.md  lint-rules.md  rule-development.md  safety-and-privacy.md
scripts/: update-formula.sh
src/: app.rs  audit.rs  aws.rs  commands.rs  config.rs  control.rs  cost_cache.rs  demo_fixture.rs  deploy_poll.rs  eb_cli.rs  font_probe.rs  form.rs  keys.rs  lib.rs  lint.rs  llm.rs  main.rs  mode_action.rs  mode_detail.rs  mode_dlq.rs  plugins.rs  profiles.rs  project.rs  report_bug.rs  saved_config.rs  shell.rs  splash.rs  sso.rs  state.rs  terraform.rs  theme.rs  ui.rs  update_check.rs  util.rs
src/app/: cmd_action.rs  cmd_alarms.rs  cmd_config_template.rs  cmd_misc.rs  cmd_nav.rs  cmd_option.rs  cmd_overlay.rs  cmd_settings.rs  cmd_view.rs  cmd_write.rs  mode_dlq_handlers.rs  mode_keys.rs  msg.rs  spawn_batch.rs  spawn_detail.rs  spawn_dlq.rs  spawn_rollout.rs  spawn_why_red.rs
src/cli/: action.rs  audit.rs  ctl.rs  drift.rs  envs.rs  explain.rs  lint.rs  mod.rs  versions.rs
