[package]
name = "ebman"
version = "0.4.0"
edition = "2021"
rust-version = "1.91"
authors = ["Tom Baldwin <tom@polymorphism.co.uk>"]
description = "k9s-style TUI for AWS Elastic Beanstalk"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tombaldwin/ebman"
homepage = "https://github.com/tombaldwin/ebman"
keywords = ["aws", "elasticbeanstalk", "tui", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-stream = "0.1"
futures = "0.3"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-elasticbeanstalk = "1"
aws-sdk-sts = "1"
aws-sdk-sqs = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-s3 = "1"
aws-sdk-ec2 = "1"
aws-types = "1"
chrono = "0.4"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
arboard = "3"
regex = "1"
portable-pty = "0.9"
vt100 = "0.15"
aws-credential-types = { version = "1.2.13", features = ["hardcoded-credentials"] }
aws-sdk-organizations = "1.110.0"
aws-sdk-costexplorer = "1"
aws-sdk-iam = "1"
aws-sdk-secretsmanager = "1"

[dev-dependencies]
# Mocked AWS clients for unit-testing aws.rs without a live AWS account.
# Used to assert on observed request shapes and exercise response variants
# (e.g. EB autocreated worker queues, paginated SQS ReceiveMessage).
aws-smithy-mocks = "0.2"
aws-smithy-types = "1"
# The `test-util` feature enables `with_test_defaults` on the SDK config
# builders, which `aws-smithy-mocks::mock_client!` relies on. Only needed
# for the test build — production paths use the regular config.
aws-sdk-elasticbeanstalk = { version = "1", features = ["test-util"] }
aws-sdk-sqs = { version = "1", features = ["test-util"] }
aws-sdk-cloudwatch = { version = "1", features = ["test-util"] }
aws-sdk-cloudwatchlogs = { version = "1", features = ["test-util"] }
aws-sdk-s3 = { version = "1", features = ["test-util"] }
aws-sdk-ec2 = { version = "1", features = ["test-util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
